--- a/index.html
+++ b/index.html
@@ -50,8 +50,6 @@
     </nav>
 </div>
 
-<!--    <span><span id="light_blue">P</span><span id="orange">a</span><span id="yellow">u</span><span id="green">l</span> van <span id="brown">M</span><span id="red">o</span><span id="blue">t</span></b></span>man -->
-
 
 <!--Hero-->
 <div class="section no-pad-bot z-depth-3" id="index-banner">
@@ -110,14 +108,14 @@
                     <div class="col s6 m6 l6">
                         <i class="skills devicon-javascript-plain" id="yellow"></i>
                     </div>
-                    <div class="col s6 m6 l6">    
-                        <i class="skills devicon-nodejs-plain" id="green"></i>
-                    </div>
-                    <div class="col s6 m6 l6">
+                      <div class="col s6 m6 l6">
                         <i class="skills devicon-jquery-plain-wordmark" id="orange"></i>
                     </div>
+                    <div class="col s6 m6 l6">    
+                        <i class="skills devicon-nodejs-plain-wordmark" id="green"></i>
+                    </div>
                     <div class="col s6 m6 l6">
-                        <i class="skills devicon-angularjs-plain" id="brown"></i>
+                        <i class="skills devicon-angularjs-plain-wordmark" id="brown"></i>
                     </div>
                     <div class="col s6 m6 l6">
                         <i class="skills devicon-postgresql-plain-wordmark" id="light_blue"></i>
@@ -134,9 +132,9 @@
 <!--Work-->
 <div class="section scrollspy" id="work">
     <div class="container">
-        <div  class="col s12">
-            <h3 class="center header text_h2"> Portfolio </h2> 
-        </div>        
+         <div class="header5 z-depth-2">
+            <h5 class="promo-caption"><span id="blue">P</span>ortfolio
+        </div>       
         <button class="filter waves-effect waves-light btn" id="button1" data-filter="all">All</button>
         <button class="filter waves-effect waves-light btn" id="button2" data-filter=".website">Website</button>
         <button class="filter waves-effect waves-light btn" id="button3" data-filter=".thesis">Thesis</button>
@@ -150,16 +148,20 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Guestlist app: Guesty <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Github repo</span></a></p>
+                        <p><a target="_blank" href="https://github.com/PaulvanMotman/Guesty"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Github repo</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Guestlist app: Guesty<i class="mdi-navigation-close right"></i></span>
                         <p>
-                            Together with two teammembers of the BSSA we've created Guesty: a guestlist management application. It's unique in the sense that it integrates events of facebook with the attendancy list of the app. Only when people have clicked on attend on facebook, they can end up on the guestlist. This provides more insight for event organisers in their guests and extends their reach.
+                            Together with two teammembers of the BSSA we've created Guesty: a guestlist management application. It's unique in the sense that it integrates events of facebook with the attendancy list of the app. 
+                        </p>
+                        <p>
+                            Only when people have clicked on attend on facebook, they can end up on the guestlist. This provides more insight for event organisers in their guests and extends their reach.
                         </p>
                         <p>
                             Deployment on Heroku coming up!
                         </p>
+                        <p><a target="_blank" href="https://github.com/PaulvanMotman/Guesty"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Github repo</span></a></p>
                     </div>
                 </div>
             </div>
@@ -170,16 +172,20 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Network app: Mentor <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Github repo</span></a></p>
+                        <p><a target="_blank" href="https://github.com/PaulvanMotman/Mentor"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Github repo</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Network app: Mentor <i class="mdi-navigation-close right"></i></span>
                         <p>
-                            As my final project for the BSSA I've created a Mentoring app. It's aim is to connect students and recent graduates with young proffesionals in the same workfield, whom have been succesfull for a couple of years. It's build as a peer-to-peer platform, where a mentee can search for the type of mentor he likes and make a booking. During a meeting, the mentor can give advice on which skills to acquire, which companies to focus on and share relevant people within his network.
+                            As my final project for the BSSA I've created a Mentoring app. It's aim is to connect students and recent graduates with young proffesionals in the same workfield, whom have been succesfull for a couple of years. 
+                        </p>
+                        <p>
+                            It's build as a peer-to-peer platform, where a mentee can search for the type of mentor he likes and make a booking. During a meeting, the mentor can give advice on which skills to acquire, which companies to focus on and share relevant people within his network.
                         </p>
                         <p>
                             Deployment on Heroku coming up!
                         </p>
+                        <p><a target="_blank" href="https://github.com/PaulvanMotman/Mentor"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Github repo</span></a></p>
                     </div>
                 </div>
             </div>
@@ -190,13 +196,20 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Website for Scarf<i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Link</span></a></p>
+                        <p><a target="_blank" href="http://www.scarf-aid.com/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Link</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Website for Scarf<i class="mdi-navigation-close right"></i></span>
-                        <p>SCARF is a charity committed to providing clothing and aid to refugees of war (Syrian, Afghan, Iraqi) at various 'refugee-points' in Europe where there is most need. SCARF also aims to create a sense of development and movement in the lives of refugees, by offering workshops and creative activities in Greece.</p>
-
-                        <p>Together with a teammember of the BSSA we've created their website and helped to contribute to their awesome work!</p>
+                        <p>
+                            SCARF is a charity committed to providing clothing and aid to refugees of war (Syrian, Afghan, Iraqi) at various 'refugee-points' in Europe where there is most need.
+                        </p> 
+                        <p>
+                            SCARF also aims to create a sense of development and movement in the lives of refugees, by offering workshops and creative activities in Greece.
+                        </p>
+                        <p>
+                            Together with a teammember of the BSSA we've created their website and helped to contribute to their awesome work!
+                        </p>
+                        <p><a target="_blank" href="http://www.scarf-aid.com/"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Link</span></a></p>
                     </div>
                 </div>
             </div>
@@ -207,11 +220,23 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Master thesis <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Pdf</span></a></p>
+                        <p><a target="_blank" href="https://drive.google.com/file/d/0B-7a5EqlvIRhRzNUZmVhbl9wWWhLeXU5VkRDNFlwQTNaWUFr/view?usp=sharing"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Pdf</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Master thesis <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>
+                            This thesis is a qualitative study of the antecedents of employee engagement in the process of integrating Corporate Social Responsibility within a firm. 
+                        </p>
+                        <p>
+                            Literature exists on the concepts of implementing CSR and employee engagement. However, a study that combines the two concepts is missing. By analyzing existing frameworks of Maon et al. (2009), Saks (2006) and Collier & Esteban (2007), this study proposes a model of employee engagement in the context of CSR implementation.
+                        </p> 
+                        <p>
+                            Furthermore, it has tested this model by investigating four Dutch companies that are known to excel in CSR and employee engagement. The findings of this research have mostly confirmed the proposed model and have led to new insights and recommendations for firms and managers that seek to engage their staff in CSR.
+                        </p>
+                        <p>
+                            Key words: Corporate social responsibility, Employee engagement, CSR integration, CSR management, employee motivation, employee commitment, antecedents of engagement, implementation processes.
+                        </p>
+                        <p><a target="_blank" href="https://drive.google.com/file/d/0B-7a5EqlvIRhRzNUZmVhbl9wWWhLeXU5VkRDNFlwQTNaWUFr/view?usp=sharing"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Pdf</span></a></p>
                     </div>
                 </div>
             </div>
@@ -222,11 +247,21 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Bachelor thesis<i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Pdf</span></a></p>
+                        <p><a target="_blank" href="https://drive.google.com/file/d/0B-7a5EqlvIRhaUhKZmlmRmRQU0k/view?usp=sharing"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Pdf</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Bachelor thesis <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>
+                            This thesis is a literature review that investigates the community based response to 'the tragedy of the commons'.
+                        </p> 
+                        <p>
+                            A tragedy of the commons is the temptation to overextract resource units from a resource system shared with others, followed by the destruction of the resource environment. An important dilemma in todays world, since it may occur at all kinds of systems and practices through time and space. Examples of problems are the overpopulation of the world, climate policies and the problems of acid rain. 
+                        </p>
+                        <p>
+                            Because of this relevance, literature on how to successfully manage common pool resources has grown significantly in the last twenty years. Since a number of market and state oriented policies failed, a community oriented approach became more popular. The aim of this thesis is to find out how community governance is able to solve a tragedy of the commons.
+                        </p>
+                        <p><a target="_blank" href="https://drive.google.com/file/d/0B-7a5EqlvIRhaUhKZmlmRmRQU0k/view?usp=sharing"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Pdf</span></a></p>
+
                     </div>
                 </div>
             </div>
@@ -237,11 +272,20 @@
                     </div>
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">Hangman <i class="mdi-navigation-more-vert right"></i></span>
-                        <p><a href="#"><span id="light_blue">Imdb</span></a></p>
+                        <p><a target="_blank" href="https://www.facebook.com/hangmanthemovie"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Imdb</span></a></p>
                     </div>
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">Hangman <i class="mdi-navigation-close right"></i></span>
-                        <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                        <p>
+                            Since I'm a enormous movie lover myself, I didn't had to think twice when my friend Steve Gijrath, movie-maker, asked me to help shoot his graduation film 'Hangman'. 
+                        </p>
+                        <p>
+                            He assigined me with the role of the line producer. This entails organising the production in the broadest sense: provide necessary facilities, equipment and people, in the right place at the right time. I also managed the budget and time restrictions. 
+                        </p>
+                        <p>
+                            All things considered a great experience where I learned a lot about the enormous hassle of making movies. 
+                        </p>
+                        <p><a target="_blank" href="https://www.facebook.com/hangmanthemovie"><span id="light_blue"><i class="fa fa-external-link" aria-hidden="true"></i> Imdb</span></a></p>
                     </div>
                 </div>
             </div>
@@ -266,17 +310,17 @@
                         </p>
                     </li>
                     <li>
-                        <a class="white-text" href="https://github.com/PaulvanMotman">
+                        <a target="_blank" class="white-text" href="https://github.com/PaulvanMotman">
                             <i class="small fa fa-github-square white-text" id="yellow"></i> Github
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.linkedin.com/in/paulvanmotman">
+                        <a target="_blank" class="white-text" href="https://www.linkedin.com/in/paulvanmotman">
                             <i class="small fa fa-linkedin-square white-text" id="light_blue"></i> Linkedin
                         </a>
                     </li>
                     <li>
-                        <a class="white-text" href="https://www.facebook.com/paul.vanmotman">
+                        <a target="_blank" class="white-text" href="https://www.facebook.com/paul.vanmotman">
                             <i class="small fa fa-facebook-square white-text" id="blue"></i> Facebook
                         </a>
                     </li>
@@ -286,7 +330,7 @@
     </div>
     <div class="footer-copyright default_color">
         <div class="container">
-            Made by <a class="white-text" href="https://paulvanmotman.com" id="green">Paul van Motman</a>. Thanks to <a class="white-text" id="red" href="http://materializecss.com/">materializecss</a>
+            Made by <a class="white-text" href="https://paulvanmotman.com" id="green">Paul van Motman</a>. Thanks to <a target="_blank" class="white-text" id="red" href="http://materializecss.com/">materializecss</a>
         </div>
     </div>
 </footer>
