updated to latest version of portfolio

--- a/index.html
+++ b/index.html
@@ -84,16 +84,16 @@
                         <h5 class="promo-caption"><span id="red">A</span>bout me
                     </div>
                     <p class="light">
-                        <strong>Graduate in Innovation and International Development gone Digital</strong>
+                        <strong>Graduate in Innovation and International Development gone Coding</strong>
                     </p>
                      <p class="light">
-                        I'm part of the B.Startup School Amsterdam, where I have participated in an intensive coding bootcamp by the New York Code + Design Academy. This training gave me the opportunity to gain a good deal of experience in programming in general and in working with JavaScript as a front and back end language in particular.
+                        I'm part of the B.Startup School Amsterdam, where I have participated in an intensive coding bootcamp by the New York Code + Design Academy. This training gave me the opportunity to gain a good deal of experience in programming in general and in working with JavaScript as a front and back end language in particular. Currently, I'm working for the New York Code & Design Academy as a teacher assistant. 
                     </p>
                     <p class="light">
-                        My bachelor International Development Studies has provided me with a solid foundation in international law, economics, sociology and sustainability, as well as professional and hands-on project management skills and capabilities. During my Master BA: Entrepreurship and Innovation I’ve developed a sophisticated understanding of entrepreneurial decision making, innovative business models and new product development 
+                        My bachelor International Development Studies has provided me with a solid foundation in international law, economics, sociology and sustainability, as well as professional and hands-on project management skills and capabilities. During my Master BA: Entrepreneurship and Innovation I’ve developed a sophisticated understanding of entrepreneurial decision making, innovative business models and new product development 
                     </p>
                     <p class="light">
-                        Starting 1st of August I'm seeking new opportunities as a junior developer in Amsterdam. I'm interested in innovative and sustainable tech-startups or social enterprises within sustainability, the circulair economy or fin-tech. Also I have a high interest in working at digital agencies and working on many different projects using new frameworks and languages. 
+                        Starting 1st of January I'm seeking new opportunities as a junior developer in Amsterdam. I'm interested in innovative and sustainable tech-startups or social enterprises within sustainability, the circulair economy or fin-tech. Also I have a high interest in working at digital agencies and working on many different projects using new frameworks and languages. 
                     </p>
                 </div>
             </div>
@@ -118,7 +118,7 @@
                         <i class="skills devicon-nodejs-plain-wordmark" id="green"></i>
                     </div>
                     <div class="col s6 m6 l6">
-                        <i class="skills devicon-angularjs-plain-wordmark" id="brown"></i>
+                        <i class="skills devicon-react-original-wordmark" id="brown"></i>
                     </div>
                     <div class="col s6 m6 l6">
                         <i class="skills devicon-postgresql-plain-wordmark" id="light_blue"></i>
@@ -141,7 +141,7 @@
         <div class="row">
             <div class="col s12 m6 l6 left-align">  
                 <p class="light">
-                    Lately I've been working on two apps during the NYCDA class, Mentor and Guesty. Both are build on Node.js, Express, Postgresql and JQuery. Check out their details below. Also I've created the website for the non-profit Scarf. At the moment I'm working on an app build with Angular, more info coming soon.
+                    Lately I've been working on two apps during the NYCDA class, Mentor and Guesty. Both are build on Node.js, Express, Postgresql and JQuery. Check out their details below. Also I've created the website for the non-profit Scarf. At the moment I'm working on an app build with React, more info coming soon.
                 </p>
             </div>
                <div class="col s12 m6 l6 left-align" id="space">  
