--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
                     </div>
                 </div>
             </div>
+             <div  class="col s12 center-align">
+                 <a href="https://www.paulvanmotman.com/cv/index.html"><button class="filter waves-effect waves-light btn" id="button2">CHECK OUT MY CV</button></a>
+            </div>
         </div>
     </div>
 </div>
